docs: implement playground and advanced docs

--- a/www/pages/index.en.mdx
+++ b/www/pages/index.en.mdx
@@ -17,7 +17,11 @@ export function Logo() {
 ## 🎉 Hi, there! 🎉
 
 <Logo />
+
 ### 🫣 What is ShimmerShards?{" "}
+
+<b>ShimmerShards</b> is a ``simple-to-use`` React state management solution, reduces
+unnecessary updates and lets you focus on creating an awesome developer experience.
 
 <b>ShimmerShards</b> is founded on the principles of simplicity and draws inspiration
 from well-known libraries like Recoil and Jotai. Its central concept revolves around
@@ -28,8 +32,5 @@ setups required. With just a simple installation, you can create a Shard (shared
 state unit) and seamlessly integrate it into your project. Moreover, ShimmerShards
 is fully type-safe for TypeScript users. This ensures a robust and reliable development
 experience, free from type-related errors and bugs.
-
-<b>ShimmerShards</b> is a ``simple-to-use`` React state management solution, reduces
-unnecessary updates and lets you focus on creating an awesome user experience.
 
 **Try it out!** and see how's `ShimmerShards bringing productivity to you.`
