--- a/www/pages/advanced/composing-shard.th.mdx
+++ b/www/pages/advanced/composing-shard.th.mdx
@@ -1,7 +1,7 @@
 ### การรวม shard เข้าด้วยกัน
 
 สำหรับการรวมข้อมูลของ `shard` เข้าด้วยกันนั้น เราจะไม่มีฟังก์ชั่นจาก library มาให้ แต่สามารถใช้ `useMemo` หรือ `useEffect` ในการช่วยสร้าง
-ข้อมูลใหม่จากการรวามข้อมูล shard ได้เลย ดังตัวอย่างข้างล่าง
+ข้อมูลใหม่จากการรวมข้อมูล shard ได้เลย ดังตัวอย่างข้างล่าง
 
 ```tsx
 const Component = () => {
