docs: correct wrong text

--- a/www/pages/advanced/memo_and_effect.en.mdx
+++ b/www/pages/advanced/memo_and_effect.en.mdx
@@ -16,7 +16,7 @@ they won't necessarily use the same instance or cache. That's where memo and eff
 
 To capture useEffect properly, use effect instead of useEffect. Remember that effect should be exclusively used within the memo function.
 
-#### Exmaple
+#### Example
 
 ```ts
 import {memo, effect, shard, useShard} from 'shimmershards'
