docs: add bun install command

--- a/www/pages/usage/firststeps.th.mdx
+++ b/www/pages/usage/firststeps.th.mdx
@@ -3,7 +3,7 @@ import Copy from "../../components/Copy";
 
 ## การติดตั้ง
 
-<Tabs items={["npm", "pnpm", "yarn"]}>
+<Tabs items={["npm", "pnpm", "yarn", "bun"]}>
   <Tab>
     ```npm i shimmershards``` <Copy copyText={"npm i shimmershards"} />
   </Tab>
@@ -11,8 +11,10 @@ import Copy from "../../components/Copy";
     ```pnpm add shimmershards``` <Copy copyText={"pnpm add shimmershards"} />
   </Tab>
   <Tab>
-    {" "}
     ```yarn add shimmershards``` <Copy copyText={"yarn add shimmershards"} />
+  </Tab>
+  <Tab>
+    ```bun add shimmershards``` <Copy copyText={"bun add shimmershards"} />
   </Tab>
 </Tabs>
 
