--- a/www/pages/usage/firststeps.en.mdx
+++ b/www/pages/usage/firststeps.en.mdx
@@ -3,7 +3,7 @@ import Copy from "../../components/Copy";
 
 ## Installation
 
-<Tabs items={["npm", "pnpm", "yarn"]}>
+<Tabs items={["npm", "pnpm", "yarn", "bun"]}>
   <Tab>
     ```npm i shimmershards``` <Copy copyText={"npm i shimmershards"} />
   </Tab>
@@ -13,6 +13,9 @@ import Copy from "../../components/Copy";
   <Tab>
     {" "}
     ```yarn add shimmershards``` <Copy copyText={"yarn add shimmershards"} />
+  </Tab>
+  <Tab>
+    ```bun add shimmershards``` <Copy copyText={"bun add shimmershards"} />
   </Tab>
 </Tabs>
 
