--- a/www/pages/advanced/memo_and_effect.th.mdx
+++ b/www/pages/advanced/memo_and_effect.th.mdx
@@ -19,18 +19,17 @@
 #### ตัวอย่าง
 
 ```ts
-import {memo, effect, shard, useShard} from 'shimmershards'
+import { memo, effect, shard, useShard } from "shimmershards";
 
-const counterShard = shard(0)
+const counterShard = shard(0);
 
 export const useCounter = memo(() => {
-    const [counter, setCounter] = useShard(counterShard)
-    const
+  const [counter, setCounter] = useShard(counterShard);
 
-    effect(() => {
-        console.log(counter)
-    }, [counter])
+  effect(() => {
+    console.log(counter);
+  }, [counter]);
 
-    return {counter,setCounter}
-})
+  return { counter, setCounter };
+});
 ```
